[gd_scene load_steps=3 format=1]

[ext_resource path="res://test_picker_of_colors_gui.gd" type="Script" id=1]
[ext_resource path="res://PickerOfColors.tscn" type="PackedScene" id=2]

[node name="Node2D" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Controls" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 693.0
margin/top = 38.0
margin/right = 1005.0
margin/bottom = 470.0

[node name="txtSelectedIndex" type="TextEdit" parent="Controls"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 110.0
margin/top = 3.0
margin/right = 222.0
margin/bottom = 30.0
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
caret/block_caret = false
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="lblSelectedIndex" type="Label" parent="Controls"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -1.0
margin/top = 7.0
margin/right = 113.0
margin/bottom = 27.0
text = "Selected Index"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="btnSetSelected" type="Button" parent="Controls"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 233.0
margin/top = 5.0
margin/right = 276.0
margin/bottom = 28.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "set"
flat = false

[node name="lblColorInfo" type="Label" parent="Controls"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 4.0
margin/top = 31.0
margin/right = 225.0
margin/bottom = 110.0
text = "Color info"
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Add10Colors" type="Button" parent="Controls"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 8.0
margin/top = 128.0
margin/right = 144.0
margin/bottom = 165.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Add 10 Colors"
flat = false

[node name="SaveCustom" type="Button" parent="Controls"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 152.0
margin/top = 388.0
margin/right = 305.0
margin/bottom = 422.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Save Custom"
flat = false

[node name="LoadCustom" type="Button" parent="Controls"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 154.0
margin/top = 343.0
margin/right = 307.0
margin/bottom = 377.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Load Custom"
flat = false

[node name="CellWidthSlider" type="HSlider" parent="Controls"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 155.0
margin/top = 289.0
margin/right = 305.0
margin/bottom = 306.0
range/min = 5.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 40.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="CellHeightSlider" type="HSlider" parent="Controls"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 155.0
margin/top = 312.0
margin/right = 305.0
margin/bottom = 329.0
range/min = 5.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 60.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="PresetStepSlider" type="VSlider" parent="Controls"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 2
margin/left = 284.0
margin/top = 157.0
margin/right = 300.0
margin/bottom = 279.0
range/min = 0.001
range/max = 0.25
range/step = 0.01
range/page = 0.0
range/value = 0.1
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="ConfigInfoLabel" type="Label" parent="Controls"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 13.0
margin/top = 223.0
margin/right = 104.0
margin/bottom = 414.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Picker" parent="." instance=ExtResource( 2 )]

margin/left = 32.0
margin/top = 41.0
margin/right = 675.0
margin/bottom = -413.0

[connection signal="pressed" from="Controls/Add10Colors" to="." method="_on_Add10Colors_pressed"]

[connection signal="pressed" from="Controls/SaveCustom" to="." method="_on_SaveCustom_pressed"]

[connection signal="pressed" from="Controls/LoadCustom" to="." method="_on_LoadCustom_pressed"]

[connection signal="value_changed" from="Controls/CellWidthSlider" to="." method="_on_CellWidthSlider_value_changed"]

[connection signal="value_changed" from="Controls/CellHeightSlider" to="." method="_on_CellHeightSlider_value_changed"]

[connection signal="value_changed" from="Controls/PresetStepSlider" to="." method="_on_PresetStepSlider_value_changed"]


